--- a/recommendation_movie.ipynb
+++ b/recommendation_movie.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "source": [
     "# Load dataset\n",
-    "Download ``movies_metadata`` at: https://www.kaggle.com/rounakbanik/the-movies-dataset (you need to register)\n"
+    "Data is already prepared in folder ``data`` of this repository. Source: https://www.kaggle.com/rounakbanik/the-movies-dataset.\n"
    ]
   },
   {
@@ -1452,14 +1452,6 @@
     "indices = bert_model_gpu.predict(query_sentence)\n",
     "display(df[['original_title', 'genres', 'sentence']].iloc[indices])\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0a207aad",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
